--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <option value="ru">Russian</option>
     </select>
 
-    <button onclick="toggleDarkMode()" class="dark-btn">ðŸŒ™</button>
+    <button onclick="toggleDarkMode()" class="dark-btn">🌙</button>
   </div>
 
   <!-- Filter Buttons -->
